Fix spacing of content children

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,8 @@ body {
     width: 100%;
     min-height: 100vh;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .content {
@@ -18,14 +20,15 @@ body {
     width: 100%;
     display: flex;
     position: relative;
-
+    display: flex;
+    flex: 1;
 }
 
 button {
     border: none;
     background-color: transparent;
     text-align: start;
-    margin-left: clamp(.25rem, 1vw, 1rem);
+    margin-left: clamp(.25rem, 12%, 1rem);
     cursor: pointer;
 }
 
@@ -45,9 +48,8 @@ header h1 {
 aside {
     background-color: #024942;
     width: clamp(6rem, 20%, 8.5rem);
-    padding: 1.5rem clamp(.5rem, 3vw, 1rem);
+    padding: 1.5rem clamp(.75rem, 3vw, 1rem) 1.5rem clamp(.5rem, 2.5vw, 1rem);
     position: relative;
-    min-height: 90vh;
     /* border-right: 2px solid #04b6aa; */
 }
 
@@ -63,6 +65,10 @@ aside {
     padding-left: 0;
 }
 
+.projects-title button {
+    min-width: 1.5rem;
+    margin: 0;
+}
 
 .home h3 {
     color: #fff;
@@ -96,14 +102,14 @@ aside {
 
 .projects h3::before {
     content: 'Projects';
+    margin-right: .5rem;
 }
 
 main {
-    padding: 3.5rem 2rem 1rem clamp(1rem, 7%, 4rem);
-    width: 87%;
-    min-height: 87vh;
+    padding: 3.5rem 2rem 1rem clamp(1rem, 7%, 3rem);
+    flex: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fit, clamp(12rem, 30%, 16rem));
+    grid-template-columns: repeat(auto-fit, clamp(12rem, 30%, 14rem));
     grid-auto-rows: 12.25rem;
     gap: 2rem;
 }
@@ -303,6 +309,10 @@ main {
 
 select {
     cursor: pointer;
+    background-image: url('photos/chevron-down.svg');
+    background-size: 1rem;
+    background-position: right 3% center;
+    background-repeat: no-repeat;
 }
 
 label {
@@ -526,7 +536,7 @@ textarea:focus, .checklist-inputs input:focus {
 
 @media screen and (max-width: 640px) {
     .projects h3::before, .home h3::before {
-        content: '';
+        content: none;
     }
 
     .home h3 {
